# libptab

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
doc/: API.md
examples/: CMakeLists.txt  example.c
include/: CMakeLists.txt  ptab.h  ptables.h
scripts/: dev.sh  format.sh  travis.sh  uncrustify.sh  valgrind.sh
src/: .clang-format  CMakeLists.txt  alloc.c  column.c  error.c  free.c  init.c  internal.h  mem.c  output.c  output.h  output_desc.c  output_file.c  ptab.c  ptab.cc  ptables.c  row.c  tool.c  version.c
src/libptab/: CMakeLists.txt  internal.h  row.c
src/ptab/: CMakeLists.txt  column.cpp  column.hpp  internal.h  main.c  ptab.c  ptab.cpp  tool.cpp  tool.hpp
src/tool/: CMakeLists.txt  column.cpp  column.hpp  ptab.cpp  row.cpp  row.hpp  tool.cpp  tool.hpp  types.hpp
tests/: CMakeLists.txt  column.c  error.c  free.c  init.c  libptab_suite.c  libptables_suite.c  main.c  output.c  row.c  test_cases.h  test_main.c  tests.c  version.c
